Attempt to fix compile setup errors (MSVC)
Disable multi-processor compile to trouble shoot sdrpp_core pre-link event errors.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ else()
     # Normal Flags
     set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
     if (MSVC)
-        set(SDRPP_COMPILER_FLAGS /O2 /Ob2 /MP /std:c++17 /EHsc)
+        set(SDRPP_COMPILER_FLAGS /O2 /Ob2 /std:c++17 /EHsc)
         set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /DEBUG /OPT:REF /OPT:ICF")
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /DEBUG /OPT:REF /OPT:ICF")
     elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
