--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,16 +90,17 @@ if (${CMAKE_BUILD_TYPE} MATCHES "Debug")
     endif ()
 else()
     # Normal Flags
-    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
     if (MSVC)
-        set(SDRPP_COMPILER_FLAGS /O2 /Ob2 /std:c++17 /EHsc)
-        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /DEBUG /OPT:REF /OPT:ICF")
-        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /DEBUG /OPT:REF /OPT:ICF")
+        set(SDRPP_COMPILER_FLAGS /O2 /Ob2 /MP /std:c++17 /EHsc)
+        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /DEBUG /LTCG /OPT:REF /OPT:ICF")
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /DEBUG /LTCG /OPT:REF /OPT:ICF")
     elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+        set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
         set(SDRPP_COMPILER_FLAGS -O3 -std=c++17 -Wno-unused-command-line-argument -undefined dynamic_lookup -flto -ffunction-sections -fdata-sections)
         set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--gc-sections")
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--gc-sections")
     else ()
+        set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
         set(SDRPP_COMPILER_FLAGS -O3 -std=c++17 -flto -ffunction-sections -fdata-sections)
         set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--gc-sections")
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--gc-sections")
