--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -10,7 +10,7 @@ on:
 
 env:
     # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-    BUILD_TYPE: RelWithDebInfo
+    BUILD_TYPE: Debug
     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
