Add graphics utils
Basic wrappers for general use to reduce code noise

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -22,6 +22,7 @@ endif ()
 if (OPT_BACKEND_GLFW)
     file(GLOB_RECURSE BACKEND_SRC "backends/glfw/*.cpp" "backends/glfw/*.c")
     file(GLOB_RECURSE BACKEND_GLAD_SRC "backends/glad/*.cpp" "backends/glad/*.c")
+    list(APPEND BACKEND_SRC ${BACKEND_GLAD_SRC} "backends/gfx.cpp" "backends/gfx.h")
 endif (OPT_BACKEND_GLFW)
 if (OPT_BACKEND_ANDROID)
     file(GLOB_RECURSE BACKEND_SRC "backends/android/*.cpp" "backends/android/*.c")
